# holbertonschool-hbnb

part2/: run.py
part2/app/: __init__.py
part2/app/api/v1/: amenities.py  places.py  reviews.py  users.py
part2/app/models/: amenities.py  basemodel.py  places.py  reviews.py  users.py
part2/app/persistence/: repository.py
part2/app/service/: facade.py
part3/: config.py  pyproject.toml  run.py
part3/app/: __init__.py
part3/app/api/v1/: amenities.py  auths.py  places.py  reviews.py  users.py
part3/app/models/: amenities.py  basemodel.py  place_amenity.py  places.py  reviews.py  users.py
part3/app/persistence/: repository.py
part3/app/service/: __init__.py  facade.py
part4/: index-script.js  index-style.css  index.html  login-script.js  login-style.css  login.html  place-script.js  place-style.css  place.html
